# bpm-finder

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.h
docs/: _config.yml  index.md
docs/_posts/: 2025-09-25-first-post.md
docs/app/: overview.md
docs/core/: copy-observer-pattern.md  copy-sink.md  sink-sequence.mmd  sink-states.mmd  sink.md
docs/dsp/: time_domain_onset_detection.md
docs/gui/: overview.md
docs/tools/: overview.md
src/: main.cpp
src/app/: BpmFinderApp.cpp  BpmFinderApp.h  BpmFinderAppFactory.cpp  BpmFinderAppFactory.h
src/audio/: AudioBinFileSink.h  AudioCsvFileSink.h  BinFileAudioSource.cpp  BinFileAudioSource.h  EnergyBinFileSink.h  FileAudioSource.cpp  FileAudioSource.h  IAudioSource.h  WasapiAudioSource.cpp  WasapiAudioSource.h
src/core/: CopyObservable.h  CopyObserver.h  CopySink.h  CopyStage.h  EventAggregator.cpp  EventAggregator.h  Observable.cpp  Observable.h  Observer.cpp  Observer.h  Sink.h  ThreadManager.cpp  ThreadManager.h  WorkerThread.cpp  WorkerThread.h
src/dsp/filters/: BandPassFilter.cpp  BandPassFilter.h
src/dsp/time_domain_onset_detection/: BandPassFilterStage.h  BpmCalculationStage.h  DominantIntervalCalculationStage.h  EnergyCalculationStage.h  InterOnsetIntervalCalculationStage.h  OnsetDetectionStage.h  PeakIndexDetectionStage.h  PipelineResultInitializationStage.h  TimeDomainOnsetDetectionDspPipeline.cpp  TimeDomainOnsetDetectionDspPipeline.h  TimeDomainOnsetDetectionResult.h
src/logging/: LoggerFactory.cpp  LoggerFactory.h
tests/: CMakeLists.txt
tests/audio/: AudioBinFileSinkTests.cpp
tests/core/: CopyObserverTests.cpp  CopySinkTests.cpp  ObserverTests.cpp  SinkTests.cpp
tests/dsp/: BandPassFilterTests.cpp
tools/: CMakeLists.txt
tools/audio/: binary_dump.py
tools/audio/AudioBinFileSink/: binary_dump.py  waveform_plot.py
tools/dsp/time_domain_onset_detection/: 01_pipeline_result_initialization.py  02_pipeline_stage_tests.py.ipynb  JsonTools.h  PipelineResultInitializationMain.cpp  PipelineStageFactory.h  PipelineStageMain.cpp  StageTestObservable.h  StageTestObserver.h  time_domain_onset_detection.py
tools/waveform_plot/: waveform_plot.py
